Internal: Core - Better handling file reading [ED-7104]

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
 		{
 			"name": "Elementor team"
 		}
-	]
+	],
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	}
 }
