--- a/.github/workflows/publish-developer-edition.yml
+++ b/.github/workflows/publish-developer-edition.yml
@@ -3,7 +3,7 @@ name: Publish Developer Edition Version
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 0' # run once a week on Sunday 00:00 UTC
+    - cron: '0 0 1,15 * *' # Runs at 00:00 UTC on the 1 and 15th of every month.
   repository_dispatch:
     types: [new-release]
 
