Internal: Add playwright local runner script [ED-7440]

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "test:php_multisite": "docker-compose run -e WP_MULTISITE=1 --rm wordpress_phpunit phpunit",
         "test:qunit": "grunt qunit",
         "test:playwright": "playwright test \"--config=tests/playwright/config/sanity.config.js\"",
-        "test:playwright:debug": "npm run test:playwright -- --debug",
+		"test:playwright:local": "playwright test \"--config=tests/playwright/config/local.config.js\"",
+		"test:playwright:debug": "npm run test:playwright -- --debug",
         "dev:start": "npm install && composer install",
         "test:jest": "jest --config='./tests/jest/jest.config.js'",
         "scripts": "grunt scripts",
