--- a/.github/workflows/screenshotter.yml
+++ b/.github/workflows/screenshotter.yml
@@ -2,6 +2,9 @@ name: Elementor-ScreenShotter
 
 on: [ push, pull_request ]
 
+permissions:
+  contents: read
+
 jobs:
   run:
     runs-on: ubuntu-20.04
