--- a/.github/workflows/promote-canary-release.yml
+++ b/.github/workflows/promote-canary-release.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   update-readme-develop:
+    permissions:
+      contents: none
     if: (github.actor == 'ronkelementor' || github.actor == 'KingYes' || github.actor == 'shilo-ey' || github.actor == 'matipojo') && startsWith(github.repository, 'elementor/')
     runs-on: ubuntu-20.04
     steps:
