--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@babel/preset-env": "~7.18.2",
         "@babel/runtime-corejs2": "~7.18.3",
         "@elementor/eslint-plugin-editor": "^0.4.0",
-        "@playwright/test": "1.21.1",
+        "@playwright/test": "^1.23.0",
         "@reach/router": "^1.3.3",
         "@wordpress/babel-plugin-import-jsx-pragma": "~3.1.2",
         "@wordpress/babel-preset-default": "^3.0.2",
@@ -65,7 +65,7 @@
         "grunt-text-replace": "~0.4.0",
         "grunt-webpack": "^4.0.2",
         "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
-        "karma": "6.3.2",
+        "karma": "^6.4.0",
         "karma-chrome-launcher": "3.1.0",
         "karma-coverage": "2.0.3",
         "karma-coverage-istanbul-reporter": "3.0.3",
