--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "babel-jest": "^28.1.2",
         "babel-loader": "8.2.5",
         "chalk": "^4.1.0",
-        "cssnano": "4.1.11",
+        "cssnano": "~5.1.12",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-jsx-a11y": "^6.6.0",
@@ -90,7 +90,7 @@
         "core-js": "^2.6.5",
         "grunt-cli": "^1.4.3",
         "jest": "^28.1.2",
-        "mime": "^2.5.2",
+        "mime": "^3.0.0",
         "prop-types": "^15.8.1",
         "reach-router-hash-history": "0.0.3",
         "react-redux": "^7.2.6",
