--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
         "@wordpress/babel-plugin-import-jsx-pragma": "~3.2.0",
         "@wordpress/babel-preset-default": "^3.0.2",
         "@wordpress/eslint-plugin": "^12.6.0",
-        "autoprefixer": "~10.4.7",
+        "autoprefixer": "~8.5.0",
         "babel-jest": "^28.1.2",
         "babel-loader": "8.2.5",
         "chalk": "^5.0.1",
-        "cssnano": "~5.1.12",
+        "cssnano": "4.1.11",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-jsx-a11y": "^6.6.0",
