--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "grunt-checktextdomain": "~1.0.1",
         "grunt-contrib-clean": "~2.0.1",
         "grunt-contrib-copy": "~1.0.0",
-        "grunt-contrib-qunit": "4.0.0",
+        "grunt-contrib-qunit": "^6.2.0",
         "grunt-contrib-sass": "~2.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-karma": "4.0.2",
@@ -61,7 +61,7 @@
         "grunt-sass": "^3.1.0",
         "grunt-shell": "~4.0.0",
         "grunt-text-replace": "~0.4.0",
-        "grunt-webpack": "^4.0.2",
+        "grunt-webpack": "^5.0.0",
         "grunt-wp-readme-to-markdown-with-extra": "~2.2.0",
         "karma": "6.4.0",
         "karma-chrome-launcher": "3.1.1",
