--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -7,6 +7,7 @@ jobs:
   poc-job:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v1
       - uses: ./.github/workflows/slack-notify.yml
         with:
           PACKAGE_VERSION: ${{ 'test version 123' }}
