--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@playwright/test": "1.21.1",
         "@reach/router": "^1.3.3",
         "@wordpress/babel-plugin-import-jsx-pragma": "~3.2.0",
-        "@wordpress/babel-preset-default": "^6.14.0",
+        "@wordpress/babel-preset-default": "4.0.0",
         "@wordpress/eslint-plugin": "^12.6.0",
         "autoprefixer": "~8.5.0",
         "babel-jest": "^28.1.2",
