--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout master branch
         uses: actions/checkout@v2
       - name: Send slack message
-        uses: ./.github/workflows/slack-notify.yml@WORKING_BRANCH
+        uses: ./.github/workflows/slack-notify.yml@$WORKING_BRANCH
         with:
           PACKAGE_VERSION: ${{ 'test version 123' }}
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
