Internal:  Testing Finder using PHPUnit [ED-6095]

--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -6,5 +6,7 @@ jobs:
   send-slack-notification:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout master branch
+        uses: actions/checkout@v2
       - name: Notify Slack
-        run: bash "${GITHUB_WORKSPACE}/.github/scripts/slack-notify.sh"
+        run: bash "./.github/scripts/slack-notify.sh"
