--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@babel/preset-env": "~7.18.6",
         "@babel/runtime-corejs3": "~7.18.6",
         "@elementor/eslint-plugin-editor": "^0.4.0",
-        "@playwright/test": "1.21.1",
+        "@playwright/test": "^1.23.4",
         "@reach/router": "^1.3.3",
         "@wordpress/babel-plugin-import-jsx-pragma": "~3.2.0",
         "@wordpress/babel-preset-default": "^3.0.2",
