--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ coverage/
 test-results/
 tests/playwright/config/storageState.json
 tests/playwright/config/local.config.js
+
+.run/watch-styles.run.xml
