--- a/.github/workflows/build-plugin/action.yml
+++ b/.github/workflows/build-plugin/action.yml
@@ -8,8 +8,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-      
-    - run: |
+    - shell: bash
+      run: |
             sed -i -E "s/Stable tag: .*/Stable tag: ${PACKAGE_VERSION}/g" ./readme.txt
             sed -i -E "s/Version: .*/Version: ${PACKAGE_VERSION}/g" elementor.php
             sed -i -E "s/ELEMENTOR_VERSION', '.*'/ELEMENTOR_VERSION', '${PACKAGE_VERSION}'/g" elementor.php
