--- a/.github/workflows/bump-version/action.yml
+++ b/.github/workflows/bump-version/action.yml
@@ -13,7 +13,9 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: |
+    - shell: bash
+      id: bump_version_step
+      run: |
             npm install --no-package-lock --no-save semver@7.3.4
             PREV_PACKAGE_VERSION=$(node -p "require('./package.json').last_cloud_version")
             NEW_PACKAGE_VERSION=$(node ./.github/scripts/update-prerelease-version.js ${{ inputs.CHANNEL }})
@@ -21,5 +23,5 @@ runs:
             echo "PACKAGE_VERSION=${NEW_PACKAGE_VERSION}" >> $GITHUB_ENV
             echo "::set-output name=prev_version::${PREV_PACKAGE_VERSION}"
             echo "PACKAGE_VERSION : ${PACKAGE_VERSION}"
-      id: bump_version_step
-      shell: bash
+      
+      
