--- a/.github/workflows/push-new-version/action.yml
+++ b/.github/workflows/push-new-version/action.yml
@@ -12,10 +12,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: |
+    - shell: bash
+      run: |
             git config user.name ${{ inputs.MAINTAIN_USERNAME }}
             git config user.email ${{ inputs.MAINTAIN_EMAIL }}
             git commit -am "${{ inputs.COMMIT_MESSAGE }}"
             git push
-      shell: bash
+      
       
