Internal: GitHub - Publish Cloud Version (Sub-staks) [ED-7614]

--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -28,6 +28,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
+      - name: Test step
+        uses: LouisBrunner/checks-action@v1.1.1
+        if: always()
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: PHPUnit
+          conclusion: ${{ job.status }}
+          output: |
+            {"summary":${{ steps.test.outputs.summary }}}
       - name: Get next release branch
         uses: ./.github/workflows/get-next-release-branch
         with:
