--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -110,7 +110,7 @@ jobs:
         with:
           TOKEN: ${{ secrets.MAINTAIN_TOKEN }}
           REPOSITORY: ${{ github.repository }}
-          BRANCH: ${{ secrets.JSON_BRANCH }} # Branch to generate JSON from
+          BRANCH: ${{ secrets.JSON_BRANCH }} # Branch to generate JSON to.
           MAINTAIN_USERNAME: ${{ secrets.MAINTAIN_USERNAME }}
           MAINTAIN_EMAIL: ${{ secrets.MAINTAIN_EMAIL }}
           TAG_NAME_FILTER: "cloud"
