Internal: Publish Cloud - Support Pre-Releases + Cleanup [ED-7878] (#19341)

--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -1,5 +1,5 @@
 name: Publish Cloud
-# Required secrets for this workflow: MAINTAIN_USERNAME, MAINTAIN_EMAIL, SLACK_TOKEN, SLACK_CHANNELS, MAINTAIN_TOKEN, JSON_BRANCH
+# Required secrets for this workflow: MAINTAIN_USERNAME, MAINTAIN_EMAIL, SLACK_TOKEN, SLACK_CHANNELS, MAINTAIN_TOKEN
 
 on: 
   workflow_dispatch:
@@ -7,6 +7,11 @@ on:
       version:
         description: 'Release branch version'
         required: false
+      pre_release:
+        type: boolean
+        description: 'Is this a pre-release?'
+        required: false
+
 
 jobs:
   bump-version:
@@ -106,19 +111,10 @@ jobs:
         with:
           tag_name: v${{ env.PACKAGE_VERSION }}
           files: elementor-*.zip
-          prerelease: true
+          prerelease: ${{ github.event.inputs.pre_release }}
           body_path: temp-changelog.txt
         env:
           GITHUB_TOKEN: ${{ secrets.MAINTAIN_TOKEN }}
-      - name: Generate Release JSON
-        uses : ./.github/workflows/generate-release-json
-        with:
-          TOKEN: ${{ secrets.MAINTAIN_TOKEN }}
-          REPOSITORY: ${{ github.repository }}
-          BRANCH: ${{ secrets.JSON_BRANCH }} # Branch to generate JSON to.
-          MAINTAIN_USERNAME: ${{ secrets.MAINTAIN_USERNAME }}
-          MAINTAIN_EMAIL: ${{ secrets.MAINTAIN_EMAIL }}
-          TAG_NAME_FILTER: "cloud"
       - name: Send slack message
         uses: ./.github/workflows/slack-notify
         with:
