--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -39,7 +39,7 @@ jobs:
             filename: './.github/workflows/config.json'
             prefix: config
       - name: Test permissions
-        uses: ./.github/workflows/permissions
+        uses: ${{ secrets.ACTIONS_REPO }}/permissions@master
       - name: Install Node.js 14.x
         uses: actions/setup-node@v2
         with:
