--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -107,8 +107,8 @@ jobs:
       - name: Upload zip file to GitHub actions artifact
         uses: actions/upload-artifact@v2
         with:
-          name: elementor-${{ env.PACKAGE_VERSION }}
-          path: ${{ github.workspace }}/elementor/**/*
+          name: ${{ env.PLUGIN_ZIP_FILENAME }}
+          path: ${{ env.PLUGIN_ZIP_PATH }}
           if-no-files-found: error
       - name: Create Git tag
         uses : maork-elementor/editor-actions/create-git-tag@master
